[package]
name = "game-orbits"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = {version="0.15.2", optional=true, default-features=false}
godot = {version="0.2.3", optional=true}
nalgebra = "*"
num-traits = "*"

[dev-dependencies]
approx = "*"

[features]
default = []
bevy = ["dep:bevy"]
godot = ["dep:godot"]
example = ["bevy", "bevy/default", "bevy/jpeg"] # 418 dependencies

[lib]
crate-type = ["lib", "cdylib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
