[package]
name = "game-orbits"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = {version="0.18.1", optional=true, default-features=false}
godot = {version="0.4.5", optional=true}
nalgebra = "0.34.1"
num-traits = "0.2.19"

[dev-dependencies]
approx = "*"

[features]
default = []
bevy = ["dep:bevy"]
godot = ["dep:godot"]
example = ["bevy", "bevy/3d", "bevy/ui", "bevy/jpeg"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
